BAN-1197: Fix adventures timers alignment

--- a/src/pages/AdventuresPage/components/AdventuresList/AdventuresList.module.less
+++ b/src/pages/AdventuresPage/components/AdventuresList/AdventuresList.module.less
@@ -59,7 +59,7 @@
 .timerWrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   column-gap: 14px;
   min-width: 304px;
 }
